fix mobile nav so my account and help are not cut off
git-svn-id: https://svn.library.cornell.edu/cul7theme/trunk@687 29d2e8ee-217f-479a-8a37-9775d62f972e

--- a/css/cul/_navbar.scss
+++ b/css/cul/_navbar.scss
@@ -75,6 +75,7 @@
 		position: relative;
 		z-index: 100;
 		background: #222;
+		max-height: 400px;	// override Bootstrap max-height so My Account and Help are visible mobile nav
 		padding-left: 0;
 		margin-left: 10px; }
 	.navbar-nav { margin: 0; }
